agent/kubernetes/services/svc_loadbalancer_prom_grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-lb
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: kube-prom-stack-kube-prome-prometheus
    operator.prometheus.io/name: kube-prom-stack-kube-prome-prometheus
